# kovra-core

./: .dockerignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: leak-scan.yml  release-cargo.yml  release-docker.yml  release-homebrew.yml  release-pypi.yml
crates/agent/: Cargo.toml  README.md
crates/agent/src/: config.rs  daemon.rs  error.rs  lib.rs  protocol.rs  session.rs
crates/agent/tests/: agent.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  commands.rs  context.rs  main.rs  onepassword.rs  provider.rs  setup.rs  value_input.rs
crates/cli/templates/: kovra-conventions.md
crates/cli/tests/: audit.rs  cli.rs  confirm.rs  doctor.rs  edit_downgrade.rs  exchange.rs  hooks.rs  import.rs  keypair.rs  package.rs  scaffold.rs  setup.rs  totp.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: audit.rs  clock.rs  confirm.rs  coordinate.rs  crypto.rs  doctor.rs  env_source.rs  envrefs.rs  error.rs  exchange.rs  file_confirm.rs  fingerprint.rs  formatter.rs  hooks.rs  index.rs  keybackup.rs  keypair.rs  keyring.rs  lib.rs  package.rs  policy.rs  provider.rs  record.rs  registry.rs  resolver.rs  scaffold.rs  scope.rs  secret.rs  sensitivity.rs  store.rs  totp.rs
crates/core/tests/: acceptance.rs  policy_enforcement.rs  resolver.rs  round_trip.rs  vault_store.rs
crates/ffi-python/: Cargo.toml  README.md  pyproject.toml
crates/ffi-python/src/: errors.rs  lib.rs  scope.rs  session.rs
crates/native-macos/: Cargo.toml  README.md
crates/native-macos/src/: formatter.rs  lib.rs  macos.rs  render.rs
crates/providers-aws/: Cargo.toml  README.md
crates/providers-aws/examples/: host_aws_check.rs
crates/providers-aws/src/: lib.rs
crates/providers-azure/: Cargo.toml  README.md
crates/providers-azure/examples/: host_az_check.rs
crates/providers-azure/src/: lib.rs
crates/webui/: Cargo.toml  README.md
crates/webui/assets/: VENDORED.md  app.css  app.js
crates/webui/src/: assets.rs  lib.rs
crates/wrapper/: Cargo.toml  README.md
crates/wrapper/examples/: kovra_run.rs  kovra_run_compose.rs
crates/wrapper/src/: allowlist.rs  caller.rs  error.rs  lib.rs  runner.rs  sanitize.rs  wrapper.rs
crates/wrapper/tests/: wrapper.rs
mcp/: README.md  pyproject.toml
mcp/kovra_mcp/: __init__.py  conventions.py  scope.py  server.py
mcp/tests/: conftest.py  test_conventions.py  test_invariants.py  test_server.py
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: index.mdx
website/src/content/docs/about/: vision.md
website/src/content/docs/agents/: mcp.mdx  tools.md
website/src/content/docs/concepts/: agent-scope.mdx  coordinates.md  env-refs.mdx  how-it-works.md  index.md  sensitivity.mdx  vault.mdx
website/src/content/docs/es/: index.mdx
website/src/content/docs/es/about/: vision.md
website/src/content/docs/es/agents/: mcp.mdx  tools.md
website/src/content/docs/es/concepts/: agent-scope.mdx  coordinates.md  env-refs.mdx  how-it-works.md  index.md  sensitivity.mdx  vault.mdx
website/src/content/docs/es/guides/: import.mdx  keypairs.mdx  references.mdx  sharing.mdx  ssh-agent.mdx  totp.mdx  usb-exchange.mdx  web-ui.mdx
website/src/content/docs/es/operations/: attended-confirmation.mdx  audit.mdx  backup-recovery.mdx  git-hooks.mdx  headless-ci.mdx
website/src/content/docs/es/project/: contributing.md  license.md  support.md
website/src/content/docs/es/reference/: cli.md  configuration.md  faq.md  glossary.md  troubleshooting.md
website/src/content/docs/es/security/: cryptography.md  decision.md  flows.md  rationale.md  threat-model.md
website/src/content/docs/es/start/: installation.mdx  quick-start.mdx  tutorial.mdx
website/src/content/docs/guides/: import.mdx  keypairs.mdx  references.mdx  sharing.mdx  ssh-agent.mdx  totp.mdx  usb-exchange.mdx  web-ui.mdx
website/src/content/docs/operations/: attended-confirmation.mdx  audit.mdx  backup-recovery.mdx  git-hooks.mdx  headless-ci.mdx
website/src/content/docs/project/: contributing.md  license.md  support.md
website/src/content/docs/reference/: cli.md  configuration.md  faq.md  glossary.md  troubleshooting.md
website/src/content/docs/security/: cryptography.md  decision.md  flows.md  rationale.md  threat-model.md
website/src/content/docs/start/: installation.mdx  quick-start.mdx  tutorial.mdx
website/src/styles/: brand.css
