[project]
name = "kovra-mcp"
version = "0.1.0"
description = "Kovra MCP server — the agent-facing secrets surface (L9), over the Rust core via PyO3."
requires-python = ">=3.12"
license = { text = "BUSL-1.1" }
dependencies = [
    "mcp>=1.27,<2",
    "kovra-ffi",
]

[project.scripts]
kovra-mcp = "kovra_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kovra_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"kovra_mcp/kovra-conventions.md" = "kovra_mcp/kovra-conventions.md"

# kovra-ffi is the local PyO3 crate (built by maturin), not a PyPI package.
[tool.uv.sources]
kovra-ffi = { path = "../crates/ffi-python" }

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
