[project]
name = "kovra-mcp"
version = "0.1.1"
description = "Kovra MCP server — let your AI agents use your secrets without ever seeing them."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BUSL-1.1" }
keywords = ["secrets", "mcp", "vault", "ai-agents", "security", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.27,<2",
    "kovra-ffi",
]

[project.urls]
Homepage = "https://kovra.sh"
Documentation = "https://kovra.sh"
Repository = "https://github.com/kaeus-inc/kovra-core"
Issues = "https://github.com/kaeus-inc/kovra-core/issues"

[project.scripts]
kovra-mcp = "kovra_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kovra_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"kovra_mcp/kovra-conventions.md" = "kovra_mcp/kovra-conventions.md"

# kovra-ffi is the local PyO3 crate (built by maturin), not a PyPI package.
[tool.uv.sources]
kovra-ffi = { path = "../crates/ffi-python" }

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.ruff]
line-length = 100
