[package]
name = "kovra-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "kovra governed ssh-agent — serves signatures from vault-held keys under the sensitivity policy, keys never leave the vault."
readme = "README.md"
keywords = ["ssh-agent", "kovra", "secrets", "ssh"]
categories = ["command-line-utilities", "authentication"]

# `kovra-agent` — the governed ssh-agent (KOV-13). A thin face over `kovra-core`
# like `kovra-wrapper`/`kovra-cli`: the dependency points inward only
# (agent → core), `core` never depends on it (open-core boundary, spec §15/§20).
# Free core, NOT enterprise/.
[dependencies]
kovra-core = { workspace = true }
# `observe_parent` for the I16 requesting-process line on per-signature prompts.
kovra-wrapper = { workspace = true }
thiserror = "2.0.18"
zeroize = { version = "1.8.2", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
# Foreground signal cleanup (SIGINT/SIGTERM → unlink socket + exit). Lightweight
# FFI only; already present transitively (kovra-wrapper).
libc = "0.2.186"

[dev-dependencies]
tempfile = "3.27.0"
ssh-encoding = "0.2"
ssh-key = { version = "0.6", features = ["ed25519", "rsa"] }
serde_json = "1.0.150"
